--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,20 +8,6 @@
   justify-content: flex-start;
 }
 
-.avatar{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: #3D00E0;
-  color: #fff;
-  text-align: center;
-  line-height: 50px;
-  font-size: 24px;
-  font-weight: bold;
-  align-self: center;
-  margin-top: 5px;
-}
-
 .user{
   font-size: 24px;
   align-self: center;
@@ -52,7 +38,7 @@ table{
 th,
 td {
   padding: 1%;
-  text-align: center;
+  text-align: left;
 }
 
 th {
@@ -81,13 +67,16 @@ td {
 .bottom-style{
   display: flex;
   flex-direction: row;
-  align-items: center;
   margin-left: 10px;
   margin-top: 10px;
 }
 
 .bottom-menu{
   margin-right: 20px;
+}
+
+.category-option:hover {
+  background-color: #f5f5f5;
 }
 
 
