--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -1,39 +1,39 @@
 <mat-sidenav-container class="sidenav-container" >
   <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
     <div class="container">
-      <div class="avatar">{{ userFirstName.charAt(0) }}</div>
-      <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
+      <h1 class="user" aria-label="Nome utente"> {{ userFirstName }} {{userLastName}} </h1>
 
-      <button mat-raised-button color="primary" class="bottom-home" (click)="backToHome()"> HomePage </button>
-      <button mat-raised-button color="primary" class="rentals-past-style" (click)="openPastRental()">Noleggi passati</button>
+      <button mat-raised-button color="primary" class="bottom-home" (click)="backToHome()" aria-label="Ritorna alla Home">HomePage</button>
+      <button mat-raised-button color="primary" class="rentals-past-style" (click)="openPastRental()" aria-label="Pagina noleggi passati">Noleggi passati</button>
     </div>
   </mat-sidenav>
 
   <mat-sidenav-content>
     <div class="bottom-style">
-      <button class="bottom-menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
+      <button class="bottom-menu" aria-label="Apri il menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
     </div>
 
   <div class="table" *ngIf="activeRentalsFilms.length > 0; else noRentals">
-    <table mat-table [dataSource]="activeRentalsFilms">
+    <mat-table [dataSource]="datasource" matSort>
 
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Titolo</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
         <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="rental_rate">
-        <th mat-header-cell *matHeaderCellDef>Tariffa giornaliera</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tariffa giornaliera</th>
         <td mat-cell *matCellDef="let film">{{ film.rental_rate }}€</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    </mat-table>
   </div>
 
   <ng-template #noRentals>
     <p> Non sono presenti noleggi attivi </p>
   </ng-template>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
