Implementato il sort  delle tabelle nei noleggi passati. Eliminata la possibilità di noleggiare un film se non si è nella home

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -61,7 +61,7 @@
   </div>
 </div>
 
-<div mat-dialog-actions>
+<div mat-dialog-actions *ngIf="this.data.fromHomePage">
   <button (click)="openRentModal()" mat-stroked-button> Noleggia </button>
   <button mat-button mat-dialog-close> Chiudi</button>
 </div>
