--- a/src/app/past-rental/past-rental.component.css
+++ b/src/app/past-rental/past-rental.component.css
@@ -65,3 +65,17 @@ td {
 .bottom-menu{
   margin-right: 20px;
 }
+
+
+.button-header {
+  background-color: #f5f5f5;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.button-header:hover {
+  background-color: #e0e0e0;
+}
