--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -16,24 +16,24 @@
     </div>
 
       <div class="table" *ngIf="pastRentalsFilms.length > 0; else noRentals">
-        <table mat-table [dataSource]="datasource" matSort>
+        <table mat-table [dataSource]="datasource">
           <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
+            <th class="button-header" (click)="orderBy('title')" mat-header-cell *matHeaderCellDef>Titolo</th>
             <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
           </ng-container>
 
           <ng-container matColumnDef="rental_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Data di noleggio</th>
+            <th class="button-header" (click)="orderBy('rental_date')" mat-header-cell *matHeaderCellDef >Data di noleggio</th>
             <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
           </ng-container>
 
           <ng-container matColumnDef="return_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Data di consegna</th>
+            <th class="button-header" (click)="orderBy('return_date')"  mat-header-cell *matHeaderCellDef>Data di consegna</th>
             <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
           </ng-container>
 
           <ng-container matColumnDef="amount">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Costo</th>
+            <th class="button-header" (click)="orderBy('amount')" mat-header-cell *matHeaderCellDef>Costo</th>
             <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
           </ng-container>
 
