--- a/src/app/rent-modal/rent-modal.component.html
+++ b/src/app/rent-modal/rent-modal.component.html
@@ -1,20 +1,32 @@
-<mat-form-field class="example-full-width">
-  <mat-label>Data di inizio noleggio</mat-label>
-  <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker"  [(ngModel)]="selectedDate">
-  <mat-hint>MM/DD/YYYY</mat-hint>
-  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
 
-<h4>Seleziona il negozio</h4>
-<mat-form-field>
-  <mat-label>Negozio</mat-label>
-  <mat-select [(ngModel)]="selectedStore">>
-    <mat-option *ngFor="let store of this.storesWithAvailableCopies" [value]="store.address">
-      {{store.address }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+<mat-card>
+  <mat-card-header>
+    <h2 mat-card-title>Noleggio del film {{ data.movie.title }} </h2>
+  </mat-card-header>
 
-<button (click)="rentDvd()"  [disabled]="isDisabled()" mat-stroked-button> Noleggia </button>
+  <mat-card-content>
+    <p>Seleziona una data</p>
+    <mat-form-field class="example-full-width">
+      <mat-label for="date-input">Data di inizio noleggio</mat-label>
+      <input id="date-input" matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker"  [(ngModel)]="selectedDate">
+      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle matIconSuffix [for]="picker" aria-label="Apri calendario" ></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
+    <p>Seleziona un negozio</p>
+    <mat-form-field>
+      <mat-label for="store-select">Negozio</mat-label>
+      <mat-select id="store-select" [(ngModel)]="selectedStore" aria-label="Seleziona un negozio tra quelli in lista">
+        <mat-option *ngFor="let store of this.storesWithAvailableCopies" [value]="store.address">
+          {{store.address }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card-content>
+
+  <mat-card-actions align="end">
+    <button (click)="rentDvd()"  [disabled]="isDisabled()" mat-stroked-button> Noleggia </button>
+    <button mat-button mat-dialog-close> Chiudi</button>
+  </mat-card-actions>
+</mat-card>
