--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -4,7 +4,7 @@
 </h1>
 
 <div mat-dialog-content>
-  <mat-card>
+  <mat-card aria-label="Informazioni sul film">
     <mat-card-header>
       <mat-card-title>Informazioni sul film</mat-card-title>
     </mat-card-header>
@@ -41,8 +41,9 @@
       </div>
 
 
-      Questo film è disponibile nei seguenti negozi:
+
       <div class="table">
+        Questo film è disponibile nei seguenti negozi:
         <table>
           <tr>
             <th> Indirizzo </th>
