--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,22 +18,9 @@
           <mat-label>Tutte le categorie</mat-label>
           <mat-select aria-label="Seleziona categoria" [(ngModel)]="selectedCategory" (selectionChange)="searchBy()">
             <mat-option value="" class="category-option">Tutte le categorie</mat-option>
-            <mat-option value="Action" class="category-option">Action</mat-option>
-            <mat-option value="Animation" class="category-option">Animation</mat-option>
-            <mat-option value="Children" class="category-option">Children</mat-option>
-            <mat-option value="Classics" class="category-option">Classics</mat-option>
-            <mat-option value="Comedy" class="category-option">Comedy</mat-option>
-            <mat-option value="Documentary" class="category-option">Documentary</mat-option>
-            <mat-option value="Drama" class="category-option">Drama</mat-option>
-            <mat-option value="Family" class="category-option">Family</mat-option>
-            <mat-option value="Foreign" class="category-option">Foreign</mat-option>
-            <mat-option value="Games" class="category-option">Games</mat-option>
-            <mat-option value="Horror" class="category-option">Horror</mat-option>
-            <mat-option value="Music" class="category-option">Music</mat-option>
-            <mat-option value="New" class="category-option">New</mat-option>
-            <mat-option value="Sci-Fi" class="category-option">Sci-Fi</mat-option>
-            <mat-option value="Sport" class="category-option">Sport</mat-option>
-            <mat-option value="Travel" class="category-option">Travel</mat-option>
+
+            <mat-option *ngFor="let category of categories" [value]="category.category_name">{{ category.category_name }}</mat-option>
+
           </mat-select>
         </mat-form-field>
 
@@ -47,7 +34,10 @@
     <mat-table [dataSource]="datasource" matSort>
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
-        <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
+        <td  mat-cell *matCellDef="let film">
+          <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
+        </td>
+
       </ng-container>
 
         <ng-container matColumnDef="release_year">
@@ -72,13 +62,14 @@
 
         <ng-container matColumnDef="cost">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Costo</th>
-          <td mat-cell *matCellDef="let film">{{ film.cost }} € </td>
+          <td mat-cell *matCellDef="let film">{{ film.rental_rate }} € </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Noleggio</th>
           <th mat-header-cell *matHeaderCellDef>Noleggio</th>
-          <td mat-cell *matCellDef="let film" aria-label="Bottone per noleggio film"> <button (click)="openRentComponent(film)" mat-button>Noleggia</button></td>
+          <td mat-cell *matCellDef="let film" aria-label="Bottone per noleggio film">
+            <button (click)="openRentComponent(film)" mat-button>Noleggia</button>
+          </td>
         </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
