--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -18,7 +18,9 @@
 
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
-        <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
+        <td mat-cell *matCellDef="let film">
+          <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="rental_date">
