--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,37 +8,34 @@
   justify-content: flex-start;
 }
 
-.user{
-  font-size: 24px;
-  align-self: center;
-}
-
 .search-container {
-  width: 200px;
-  margin-left: 20px;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.category-style {
-  width: 200px;
-  margin-left: 20px;
+@media (max-width: 600px) {
+  .search-container{
+    width: 80%;
+  }
+
+  .table th,
+  .table td {
+    min-width: 100px;
+  }
 }
 
-.personal-rental-style,
-.rentals-past-style{
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-left: 10px;
-}
-
-table{
-  width: 100%;
+.table{
+  width: 90%;
   border-collapse: collapse;
+  margin: 0 auto;
+  text-align: center;
+  border: 1px solid #ccc;
 }
 
 th,
 td {
-  padding: 1%;
   text-align: left;
+  padding: 1%;
 }
 
 th {
@@ -47,7 +44,6 @@ th {
 }
 
 td {
-  min-width: 10%;
   border-bottom: 1px solid #ccc;
 }
 
@@ -55,36 +51,27 @@ td {
   cursor: pointer;
 }
 
-.sidenav-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #eee;
-}
-
 .bottom-style{
   display: flex;
-  flex-direction: row;
-  margin-left: 10px;
-  margin-top: 10px;
+  flex-direction: column;
 }
 
-.bottom-menu{
-  margin-right: 20px;
+.stile-categoria{
+  background-color: white;
 }
 
-.category-option:hover {
-  background-color: #f5f5f5;
+.stile-categoria:focus,
+.stile-categoria:hover{
+  background-color: #DBDBDB;
 }
 
+.sidenav-container {
+  background-color: white;
+}
 
-
-
-
-
-
+.mat-paginator{
+  background-color: #DBDBDB;
+}
 
 
 
