--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,82 +1,68 @@
 <mat-sidenav-container class="sidenav-container" >
-  <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
-    <div class="container">
-      <h1 class="user"> {{ userFirstName }} {{userLastName}} </h1>
-
-      <button mat-raised-button color="primary" aria-label="Pagina noleggi passati" class="rentals-past-style" (click)="openPastRental()">Noleggi passati</button>
-      <button mat-raised-button color="primary" aria-label="Pagina noleggi attivi" class="personal-rental-style" (click)="openPersonalRental()">Noleggi attivi</button>
-
-    </div>
-  </mat-sidenav>
-
   <mat-sidenav-content>
       <div class="bottom-style">
-        <button class="bottom-menu" aria-label="Apri il menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
-
-        <!-- RICERCA PER CATEGORIA -->
-        <mat-form-field>
-          <mat-label>Tutte le categorie</mat-label>
-          <mat-select aria-label="Seleziona categoria" [(ngModel)]="selectedCategory" (selectionChange)="searchBy()">
-            <mat-option value="" class="category-option">Tutte le categorie</mat-option>
-            <mat-option value="Action" class="category-option">Action</mat-option>
-            <mat-option value="Animation" class="category-option">Animation</mat-option>
-            <mat-option value="Children" class="category-option">Children</mat-option>
-            <mat-option value="Classics" class="category-option">Classics</mat-option>
-            <mat-option value="Comedy" class="category-option">Comedy</mat-option>
-            <mat-option value="Documentary" class="category-option">Documentary</mat-option>
-            <mat-option value="Drama" class="category-option">Drama</mat-option>
-            <mat-option value="Family" class="category-option">Family</mat-option>
-            <mat-option value="Foreign" class="category-option">Foreign</mat-option>
-            <mat-option value="Games" class="category-option">Games</mat-option>
-            <mat-option value="Horror" class="category-option">Horror</mat-option>
-            <mat-option value="Music" class="category-option">Music</mat-option>
-            <mat-option value="New" class="category-option">New</mat-option>
-            <mat-option value="Sci-Fi" class="category-option">Sci-Fi</mat-option>
-            <mat-option value="Sport" class="category-option">Sport</mat-option>
-            <mat-option value="Travel" class="category-option">Travel</mat-option>
+        <mat-form-field class="search-container">
+          <mat-label> Ricerca per categoria </mat-label>
+          <mat-select aria-label="Seleziona categoria" [(ngModel)]="selectedCategory" (selectionChange)="searchBy()" (focus)="onCategorySearchFieldFocus()" (blur)="onCategorySearchFieldBlur()">
+            <mat-option value="" class="stile-categoria" [class.selected-category]="selectedCategory === ''"> Tutte le categorie </mat-option>
+            <mat-option value="Action" class="stile-categoria" [class.selected-category]="selectedCategory === 'Action'"> Action</mat-option>
+            <mat-option value="Animation" class="stile-categoria" [class.selected-category]="selectedCategory === 'Animation'"> Animation</mat-option>
+            <mat-option value="Children" class="stile-categoria" [class.selected-category]="selectedCategory === 'Children'"> Children</mat-option>
+            <mat-option value="Classics" class="stile-categoria" [class.selected-category]="selectedCategory === 'Classics'"> Classics</mat-option>
+            <mat-option value="Comedy" class="stile-categoria" [class.selected-category]="selectedCategory === 'Comedy'"> Comedy</mat-option>
+            <mat-option value="Documentary" class="stile-categoria" [class.selected-category]="selectedCategory === 'Documentary'"> Documentary</mat-option>
+            <mat-option value="Drama" class="stile-categoria" [class.selected-category]="selectedCategory === 'Drama'"> Drama</mat-option>
+            <mat-option value="Family" class="stile-categoria" [class.selected-category]="selectedCategory === 'Family'"> Family</mat-option>
+            <mat-option value="Foreign" class="stile-categoria" [class.selected-category]="selectedCategory === 'Foreign'"> Foreign</mat-option>
+            <mat-option value="Games" class="stile-categoria" [class.selected-category]="selectedCategory === 'Games'"> Games</mat-option>
+            <mat-option value="Horror" class="stile-categoria" [class.selected-category]="selectedCategory === 'Horror'"> Horror</mat-option>
+            <mat-option value="Music" class="stile-categoria" [class.selected-category]="selectedCategory === 'Music'"> Music</mat-option>
+            <mat-option value="New" class="stile-categoria" [class.selected-category]="selectedCategory === 'New'"> New</mat-option>
+            <mat-option value="Sci-Fi" class="stile-categoria" [class.selected-category]="selectedCategory === 'Sci-Fi'"> Sci-Fi</mat-option>
+            <mat-option value="Sport" class="stile-categoria" [class.selected-category]="selectedCategory === 'Sport'"> Sport</mat-option>
+            <mat-option value="Travel" class="stile-categoria" [class.selected-category]="selectedCategory === 'Travel'"> Travel</mat-option>
           </mat-select>
         </mat-form-field>
 
-        <!-- RICERCA DINAMICA PER TITOLO -->
         <mat-form-field class="search-container">
-          <input matInput type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchFilter" (keyup)="searchBy()"aria-label="Cerca titolo di un film">
+          <input matInput type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchFilter" (keyup)="searchBy()" aria-label="Cerca titolo di un film">
         </mat-form-field>
       </div>
 
   <div class="table">
-    <mat-table [dataSource]="datasource" matSort>
+    <mat-table [dataSource]="films">
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
+        <th mat-header-cell *matHeaderCellDef>Titolo</th>
         <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
       </ng-container>
 
         <ng-container matColumnDef="release_year">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Anno di uscita</th>
+          <th mat-header-cell *matHeaderCellDef >Anno di uscita</th>
           <td mat-cell *matCellDef="let film">{{ film.release_year }}</td>
         </ng-container>
 
         <ng-container matColumnDef="rating">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Rating</th>
+          <th mat-header-cell *matHeaderCellDef >Rating</th>
           <td mat-cell *matCellDef="let film">{{ film.rating }}</td>
         </ng-container>
 
         <ng-container matColumnDef="genre">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Genere</th>
+          <th mat-header-cell *matHeaderCellDef >Genere</th>
           <td mat-cell *matCellDef="let film">{{ film.genre }}</td>
         </ng-container>
 
         <ng-container matColumnDef="language">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Lingua</th>
+          <th mat-header-cell *matHeaderCellDef >Lingua</th>
           <td mat-cell *matCellDef="let film">{{ film.language }}</td>
         </ng-container>
 
         <ng-container matColumnDef="cost">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Costo</th>
+          <th mat-header-cell *matHeaderCellDef >Costo</th>
           <td mat-cell *matCellDef="let film">{{ film.cost }} € </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Noleggio</th>
+          <th mat-header-cell *matHeaderCellDef >Noleggio</th>
           <th mat-header-cell *matHeaderCellDef>Noleggio</th>
           <td mat-cell *matCellDef="let film" aria-label="Bottone per noleggio film"> <button (click)="openRentComponent(film)" mat-button>Noleggia</button></td>
         </ng-container>
@@ -85,11 +71,13 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </mat-table>
-    <mat-paginator [pageIndex]="currentPageNumber"
-                   [length]="totalResults"
+
+    <mat-paginator [length]="totalResults"
                    (page)="onPageChange($event)"
                    [pageSizeOptions]="[10, 20, 30]"
-                   [pageSize]="currentPageSize" showFirstLastButtons
+                   [pageSize]="currentPageSize"
+                   [showFirstLastButtons] = "true"
+                   [ngClass]="'custom-paginator'"
                    aria-label="Pulsanti per la navigazione della pagina">
     </mat-paginator>
   </div>
