--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,10 +1,16 @@
 .login-container {
-  max-width: 400px;
+  max-width: 20%;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #f7f7f7;
+}
+
+@media (max-width: 600px) {
+  .login-container{
+    max-width: 50%;
+  }
 }
 
 .field-style {
@@ -19,3 +25,5 @@ button {
   display: block;
   width: 100%;
 }
+
+
