--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,22 @@
 <div class="login-container">
   <h1> Login </h1>
-  <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+  <form (ngSubmit)="onSubmit()">
+
     <div class="field-style">
       <mat-form-field>
         <mat-label>Customer ID</mat-label>
         <input matInput [(ngModel)]="customer_id" name="customer_id" required>
-        <mat-error *ngIf="loginForm.controls['customer_id'].invalid && loginForm.controls['customer_id'].touched">
-          Customer ID richiesto.
-        </mat-error>
       </mat-form-field>
     </div>
+
     <div class="field-style">
       <mat-form-field>
         <mat-label>Password</mat-label>
         <input matInput type="password" [(ngModel)]="userpassword" name="userpassword" required>
-        <mat-error *ngIf="loginForm.controls['userpassword'].invalid && loginForm.controls['userpassword'].touched">
-          Password richiesta.
-        </mat-error>
       </mat-form-field>
     </div>
+
     <button mat-raised-button color="primary" type="submit" aria-label="Login"> Login </button>
+
   </form>
 </div>
