--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -1,39 +1,30 @@
 <mat-sidenav-container class="sidenav-container" >
-  <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
-    <div class="container">
-      <h1 class="user" aria-label="Nome utente"> {{ userFirstName }} {{userLastName}} </h1>
-
-      <button mat-raised-button color="primary" class="bottom-home" (click)="backToHome()" aria-label="Ritorna alla Home">HomePage</button>
-      <button mat-raised-button color="primary" class="personal-rental-style" (click)="openPersonalRental()" aria-label="Pagina noleggi attivi">Noleggi attivi</button>
-
-    </div>
-  </mat-sidenav>
-
   <mat-sidenav-content>
-    <div class="bottom-style">
-      <button class="bottom-menu" mat-raised-button color="primary" (click)="toggleSidenav()" aria-label="Apri il menu">Menu </button>
-      <button class="bottom-menu" mat-raised-button color="primary" aria-label="Spesa totale dei noleggi"> Spesa totale : {{ totalAmount }} € </button>
+    <div>
+      <mat-card class="card-style">
+        <mat-card-content> Spesa totale: {{totalAmount}} €</mat-card-content>
+      </mat-card>
     </div>
 
-      <div class="table" *ngIf="pastRentalsFilms.length > 0; else noRentals">
-        <table mat-table [dataSource]="datasource" matSort>
+      <div class="table">
+        <table mat-table [dataSource]="pastRentalsFilms">
           <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
+            <th mat-header-cell *matHeaderCellDef>Titolo</th>
             <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
           </ng-container>
 
           <ng-container matColumnDef="rental_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Data di noleggio</th>
+            <th mat-header-cell *matHeaderCellDef>Data di noleggio</th>
             <td mat-cell *matCellDef="let film">{{ film.rental_date.split("T")[0] }}</td>
           </ng-container>
 
           <ng-container matColumnDef="return_date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Data di consegna</th>
+            <th mat-header-cell *matHeaderCellDef>Data di consegna</th>
             <td mat-cell *matCellDef="let film">{{ film.return_date.split("T")[0] }}</td>
           </ng-container>
 
           <ng-container matColumnDef="amount">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Costo</th>
+            <th mat-header-cell *matHeaderCellDef>Costo</th>
             <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
           </ng-container>
 
@@ -41,8 +32,5 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
       </div>
-    <ng-template #noRentals>
-      <p> Non sono presenti noleggi passati </p>
-    </ng-template>
   </mat-sidenav-content>
 </mat-sidenav-container>
