--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -1,28 +1,13 @@
 <mat-sidenav-container class="sidenav-container" >
-  <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
-    <div class="container">
-      <h1 class="user" aria-label="Nome utente"> {{ userFirstName }} {{userLastName}} </h1>
-
-      <button mat-raised-button color="primary" class="bottom-home" (click)="backToHome()" aria-label="Ritorna alla Home">HomePage</button>
-      <button mat-raised-button color="primary" class="rentals-past-style" (click)="openPastRental()" aria-label="Pagina noleggi passati">Noleggi passati</button>
-    </div>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <div class="bottom-style">
-      <button class="bottom-menu" aria-label="Apri il menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
-    </div>
-
-  <div class="table" *ngIf="activeRentalsFilms.length > 0; else noRentals">
-    <mat-table [dataSource]="datasource" matSort>
-
+  <div class="table">
+    <mat-table [dataSource]="activeRentalsFilms">
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
+        <th mat-header-cell *matHeaderCellDef>Titolo</th>
         <td (click)="openMovieDetails(film)" mat-cell *matCellDef="let film">{{ film.title }}</td>
       </ng-container>
 
       <ng-container matColumnDef="rental_rate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tariffa giornaliera</th>
+        <th mat-header-cell *matHeaderCellDef>Tariffa giornaliera</th>
         <td mat-cell *matCellDef="let film">{{ film.rental_rate }}€</td>
       </ng-container>
 
@@ -30,10 +15,4 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </mat-table>
   </div>
-
-  <ng-template #noRentals>
-    <p> Non sono presenti noleggi attivi </p>
-  </ng-template>
-
-  </mat-sidenav-content>
 </mat-sidenav-container>
