--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -30,7 +30,7 @@
   margin-left: 10px;
 }
 
-table{
+.table{
   width: 100%;
   border-collapse: collapse;
 }
@@ -78,14 +78,6 @@ td {
 .category-option:hover {
   background-color: #f5f5f5;
 }
-
-
-
-
-
-
-
-
 
 
 
