--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,14 +26,16 @@
 
         <!-- RICERCA DINAMICA PER TITOLO -->
         <mat-form-field class="search-container">
-          <input matInput type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchFilter" (keyup)="searchBy()"aria-label="Cerca titolo di un film">
+          <input matInput type="text" placeholder="Ricerca per titolo" [(ngModel)]="searchFilter" (keyup)="searchBy()" aria-label="Cerca titolo di un film">
         </mat-form-field>
       </div>
 
   <div class="table">
-    <mat-table [dataSource]="datasource" matSort>
+    <mat-table [dataSource]="datasource">
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Titolo</th>
+        <th mat-header-cell *matHeaderCellDef >
+          <button (click)="orderBy('F.title')" mat-button tabindex="0">Titolo</button>
+        </th>
         <td  mat-cell *matCellDef="let film">
           <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
         </td>
@@ -41,32 +43,42 @@
       </ng-container>
 
         <ng-container matColumnDef="release_year">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Anno di uscita</th>
+          <th class="table-header" mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('F.release_year')" mat-button tabindex="0">Anno di uscita</button>
+          </th>
           <td mat-cell *matCellDef="let film">{{ film.release_year }}</td>
         </ng-container>
 
         <ng-container matColumnDef="rating">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Rating</th>
+          <th class="table-header" mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('F.rating')" mat-button tabindex="0">Rating</button>
+          </th>
           <td mat-cell *matCellDef="let film">{{ film.rating }}</td>
         </ng-container>
 
         <ng-container matColumnDef="genre">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Genere</th>
+          <th class="table-header" mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('genre')" mat-button tabindex="0">Genere</button>
+          </th>
           <td mat-cell *matCellDef="let film">{{ film.genre }}</td>
         </ng-container>
 
         <ng-container matColumnDef="language">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Lingua</th>
+          <th class="table-header" mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('language')" mat-button tabindex="0">Lingua</button>
+          </th>
           <td mat-cell *matCellDef="let film">{{ film.language }}</td>
         </ng-container>
 
         <ng-container matColumnDef="cost">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Costo</th>
+          <th class="table-header" mat-header-cell *matHeaderCellDef>
+            <button class="" (click)="orderBy('rental_rate')" mat-button tabindex="0">Costo</button>
+          </th>
           <td mat-cell *matCellDef="let film">{{ film.rental_rate }} € </td>
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef>Noleggio</th>
+          <th class="table-header" mat-header-cell *matHeaderCellDef>Noleggio</th>
           <td mat-cell *matCellDef="let film" aria-label="Bottone per noleggio film">
             <button (click)="openRentComponent(film)" mat-button>Noleggia</button>
           </td>
