--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -1,37 +1,58 @@
 <mat-sidenav-container class="sidenav-container" >
-  <div class="table">
-    <mat-table [dataSource]="activeRentalsFilms">
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>
-          <button (click)="orderBy('title')" mat-button tabindex="0">
-            Titolo
-          </button>
-        </th>
-        <td mat-cell *matCellDef="let film">
-          <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
-        </td>
-      </ng-container>
+  <mat-sidenav #sidenav [opened]="isSidenavOpen" class="sidenav-left">
+    <div class="container">
+      <h1 class="user" aria-label="Nome utente"> {{ userFirstName }} {{userLastName}} </h1>
 
-      <ng-container matColumnDef="rental_date">
-        <th mat-header-cell *matHeaderCellDef>
-          <button (click)="orderBy('rental_date')" mat-button tabindex="0">
-            Data di inizio noleggio
-          </button>
-        </th>
-        <td mat-cell *matCellDef="let film">{{ film.rental_date.split('T')[0] }}</td>
-      </ng-container>
+      <button mat-raised-button color="primary" class="bottom-home" (click)="backToHome()" aria-label="Ritorna alla Home">HomePage</button>
+      <button mat-raised-button color="primary" class="rentals-past-style" (click)="openPastRental()" aria-label="Pagina noleggi passati">Noleggi passati</button>
+    </div>
+  </mat-sidenav>
 
-      <ng-container matColumnDef="rental_rate">
-        <th mat-header-cell *matHeaderCellDef>
-          <button (click)="orderBy('rental_rate')" mat-button tabindex="0">
-            Tariffa giornaliera
-          </button>
-        </th>
-        <td mat-cell *matCellDef="let film">{{ film.rental_rate }}€</td>
-      </ng-container>
+  <mat-sidenav-content>
+    <div class="bottom-style">
+      <button class="bottom-menu" aria-label="Apri il menu" mat-raised-button color="primary" (click)="toggleSidenav()">Menu </button>
+    </div>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </mat-table>
-  </div>
+    <div class="table" *ngIf="activeRentalsFilms.length > 0; else noRentals">
+      <mat-table [dataSource]="datasource" matSort>
+
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('title')" mat-button tabindex="0">
+              Titolo
+            </button>
+          </th>
+          <td mat-cell *matCellDef="let film">
+            <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="rental_date">
+          <th mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('rental_date')" mat-button tabindex="0">
+              Data di inizio noleggio
+            </button>
+          </th>
+          <td mat-cell *matCellDef="let film">  {{ film.rental_date | date : 'dd/MM/yyyy' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="rental_rate">
+          <th mat-header-cell *matHeaderCellDef>
+            <button (click)="orderBy('rental_rate')" mat-button tabindex="0">
+              Tariffa giornaliera
+            </button>
+          </th>
+          <td mat-cell *matCellDef="let film">{{ film.rental_rate }}€</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </mat-table>
+    </div>
+
+    <ng-template #noRentals>
+      <p> Non sono presenti noleggi attivi </p>
+    </ng-template>
+
+  </mat-sidenav-content>
 </mat-sidenav-container>
