--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,6 +22,10 @@
   .table td {
     min-width: 100px;
   }
+
+  .table{
+    overflow-x: auto;
+  }
 }
 
 .table{
@@ -67,6 +71,15 @@ td {
 
 .sidenav-container {
   background-color: white;
+}
+
+.table-header{
+  background-color: #f5f5f5;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 
 
