--- a/src/app/past-rental/past-rental.component.css
+++ b/src/app/past-rental/past-rental.component.css
@@ -41,6 +41,7 @@ td {
   text-align: center;
   border-collapse: collapse;
   margin: 0 auto 20px;
+  font-size: 16px;
 }
 
 @media (max-width: 600px) {
@@ -58,7 +59,6 @@ td {
   background-color: white;
 }
 
-
 .button-header {
   background-color: #f5f5f5;
   border: none;
@@ -66,8 +66,4 @@ td {
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s ease;
-}
-
-.button-header:hover {
-  background-color: #e0e0e0;
 }
